<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.prash.barometer_socket_4022016.ClientActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|text"
        android:ems="8"
        android:id="@+id/ServerIP"
        android:hint="@string/server_ip_address"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:id="@+id/tv"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:layout_below="@+id/ServerIP"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/force_send"
        android:id="@+id/Connect"
        android:textSize="24sp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:elevation="4dp"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textStyle="normal"
        android:typeface="normal"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/tv"
        android:layout_alignStart="@+id/ServerIP" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/Stop"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:typeface="normal"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_alignTop="@+id/Connect"
        android:layout_alignEnd="@+id/ServerIP" />
</RelativeLayout>
