<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.prash.barometer_socket_4022016.ServerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip"
        android:id="@+id/IP"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pressure"
        android:id="@+id/Pressure_1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/location"
        android:id="@+id/Location_1"
        android:layout_below="@+id/Pressure_1"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pressure"
        android:id="@+id/Pressure_2"
        android:layout_marginTop="44dp"
        android:textSize="26sp"
        android:layout_below="@+id/Location_1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/location"
        android:id="@+id/Location_2"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:layout_below="@+id/Pressure_2"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pressure"
        android:id="@+id/Pressure_3"
        android:layout_marginTop="44dp"
        android:textSize="26sp"
        android:layout_below="@+id/Location_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/location"
        android:id="@+id/Location_3"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:layout_below="@+id/Pressure_3"
        android:layout_alignRight="@+id/Pressure_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rate"
        android:id="@+id/Rate"
        android:layout_below="@+id/Location_3"
        android:layout_marginTop="44dp"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forecast"
        android:id="@+id/Forcast"
        android:layout_marginTop="44dp"
        android:textSize="26sp"
        android:layout_below="@+id/Rate"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="1dp"
        android:layout_height="44dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/Location_1"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:background="@color/background_material_dark"
        android:contentDescription="@string/separator" />

    <ImageView
        android:layout_width="1dp"
        android:layout_height="44dp"
        android:id="@+id/imageView2"
        android:layout_marginLeft="16dp"
        android:background="@color/background_material_dark"
        android:layout_below="@+id/Location_2"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/separator" />

    <ImageView
        android:layout_width="1dp"
        android:layout_height="44dp"
        android:id="@+id/imageView3"
        android:layout_marginLeft="16dp"
        android:background="@color/background_material_dark"
        android:layout_below="@+id/Location_3"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/separator" />

    <ImageView
        android:layout_width="1dp"
        android:layout_height="44dp"
        android:id="@+id/imageView4"
        android:layout_marginLeft="16dp"
        android:background="@color/background_material_dark"
        android:layout_below="@+id/Rate"
        android:layout_toEndOf="@+id/imageView"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/separator" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/around_location"
        android:id="@+id/Around_Location"
        android:layout_below="@+id/Forcast"
        android:textSize="18sp" />

</RelativeLayout>
